vicis_ir/tests/snapshots/mem2reg__mem2reg_2.snap
---
source: tests/mem2reg.rs
expression: module

---
source_filename = ""
target datalayout = ""
target triple = ""


define external dso_local default i32 @main() {
0:
    %1 = add nsw i32 1, 1
    %2 = sub nsw i32 1, %1
    %3 = add nsw i32 %1, 3
    ret i32 %3
}


